--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 小小程序猿的博客
-SEOTitle: 小小程序猿的博客 | Lily Blog
+title: PaulKala的博客
+SEOTitle: PaulKala的博客 | Paul Blog
 header-img: img/home-bg.jpg
 email: xxx@gmail.com
-description: "这里是 @Lily 程序猿 洛菲莉 的个人博客，爱生活， 爱代码。"
-keyword: "coding 程序猿 罗福莉"
+description: "这里是 @PaulKala 大学僧 黄柏林 的个人博客，爱生活， 爱作业。"
+keyword: "coding 大学僧 黄柏林"
 url: "https://luofuli.bitcron.com"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -67,7 +67,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "爱代码， 爱生活"
+sidebar-about-description: "爱作业， 爱生活"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
